# stubb

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
search/: search_index.json
stubb/: __init__.py  conform.py  decorators.py  parser.py
stubb/cli/: cli.py  eval.py  inspect.py  serve.py
stubb/logging/: __init__.py
tests/: test_decorators.py  test_pydantic_grammar_generation.py  test_stubb.py
